# gns3-api-util

./: .SRCINFO  .gitignore  .goreleaser.yaml  404.html  Dockerfile  Makefile  PKGBUILD  README.md  authenticate.py  docs.json  go.mod  go.sum  index.html  main.go  main.py  mkdocs.yml  pyproject.toml  release.sh  requirements.txt
.github/workflows/: ci.yml  docs.yml  release.yml
cli-reference/commands/: index.html
cli-reference/examples/: index.html
cmd/: acl.go  appliance.go  cluster.go  completion.go  compute.go  drawing.go  group.go  image.go  link.go  node.go  pool.go  project.go  remote.go  role.go  root.go  share.go  snapshot.go  symbol.go  system.go  template.go  user.go
cmd/add/: add.go  group_member.go  privilege.go  to_pool.go
cmd/auth/: auth.go  login.go  status.go
cmd/class/: class.go  create.go  delete.go  list.go
cmd/clustercmd/: addNodeToCluster.go  applyConfig.go  clusterConfigCmd.go  createCluster.go  editConfig.go  listClusters.go  syncConfig.go
cmd/delete/: ace.go  compute.go  delete.go  drawing.go  group.go  image.go  link.go  node.go  pool.go  pool_resource.go  project.go  prune_images.go  role.go  role_privilege.go  snapshot.go  template.go  user.go  user_from_group.go
cmd/exercise/: create.go  delete.go  exercise.go  info.go  list.go
docs/: contributing.md  index.md  roadmap.md
roadmap/: index.html
scripts/: bulk_user_managment.py  class-example.json  example.json  generate-completions.sh  test.yml  update-packages.sh
search/: search_index.json
site/: index.html  sitemap.xml
src/: a  main.py
testing/: run_all.sh
(+244 files in other folders)
