[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gns3util"
version = "0.5.3"
requires-python = ">=3.13"
dependencies = [
    "click",
    "requests",
    "rich",
    "bottle",
    "InquirerPy",
]

[project.scripts]
gns3util = "gns3util.cli:gns3util"

[tool.setuptools.package-data]
"gns3util.help_texts" = ["*.json"]
"gns3util.static" = ["*"]
